thesis/kubernetes-vulns/snippets/k05-noEgressControls-safe.yaml
# K05-c remediated: k05_noEgressControls=false
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-egress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53   # DNS only
    - to:
        - podSelector:
            matchLabels:
              io.mad.service: postgres
      ports:
        - protocol: TCP
          port: 5432
